# yoloworld_auto_annotation_to_cvat

./: .gitignore  README.md  pyproject.toml
20241210/: annotations.xml
src/: main.py
src/auto_annotation/: __init__.py  config.py  cvat_tools.py  utils.py  yolo_engine.py
