[project]
name = "yoloworld-auto-annotation-to-cvat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip",
    "lxml>=5.3.0",
    "ultralytics==8.3.4",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
