[project]
name = "yoloworld-auto-annotation-to-cvat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clip",
    "lxml>=5.3.0",
    "ultralytics==8.3.4",
    "pillow>=10.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
